# Trilinos_tutorial

./: CMakeLists.txt  Makefile  cleanit.sh  cmake_guirun.sh  live-cmake  make_guirun.sh  modules  read.html  runit.sh  setup.sh  tramonto.html  tutorial_gui
advanced/: CMakeLists.txt  CMakeLists.txt~  Makefile  Makefile~
advanced/CurlLSFEM_example/: CMakeLists.txt  Makefile  example_CurlLSFEM.cpp
advanced/DivLSFEM_example/: CMakeLists.txt  Makefile  example_DivLSFEM.cpp
advanced/Epetra_Basic_Perf/: CMakeLists.txt  Epetra_Basic_Perf.cpp  Makefile
advanced/Epetra_CrsSingletonFilter/: CMakeLists.txt
advanced/Stratimikos_Preconditioner/: CMakeLists.txt  Makefile  MixedOrderPhysicsBasedPreconditioner.cpp
advanced/Stratimikos_Solver_Driver/: CMakeLists.txt  Makefile  aprepro_vhelp.h  aprepro_vhelp.h.gch  gui_params.xml  test_single_stratimikos_solver.cpp  test_single_stratimikos_solver_driver.cpp
beginner/: CMakeLists.txt  CMakeLists.txt~  FrontPage.html  Makefile  Makefile~
beginner/Anasazi_Block_Davidson/: ABDcpp.html  AnasaziBlockDavidson.html  Anasazi_Block_Davidson.cpp  CMakeLists.txt  Makefile
beginner/Anasazi_Block_KrylovSchur/: ABKScpp.html  AnasaziBlockKrylovSchurSVD.html  Anasazi_Block_KrylovSchur.cpp  CMakeLists.txt  Makefile
beginner/Anasazi_LOBPCG/: ALOBPCGcpp.html  AnasaziLOBPCG.html  Anasazi_LOBPCG.cpp  CMakeLists.txt  Makefile
beginner/Epetra_Lesson01-Init/: CMakeLists.txt  Makefile
beginner/Epetra_Lesson02-Map-Vector/: CMakeLists.txt  Makefile
beginner/Epetra_Lesson03-Power-Method/: CMakeLists.txt  Makefile
beginner/Epetra_Lesson04-Sparse-Matrix-Fill/: CMakeLists.txt
beginner/Epetra_Lesson05-Redistribution/: CMakeLists.txt  Makefile
beginner/Epetra_Power_Method/: CMakeLists.txt  EPMcpp.html  EpetraPM.html  Epetra_Power_Method.cpp  Makefile
beginner/Epetra_Simple_Vector/: CMakeLists.txt  ESVcpp.html  EpetraSV.html  Epetra_Simple_Vector.cpp  Makefile
beginner/Galeri_Linear_System/: CMakeLists.txt  GLScpp.html  GaleriLS.html  Galeri_Linear_System.cpp  Makefile
beginner/Ifpack_Preconditioner_Factory/: CMakeLists.txt  IfpackFactory.html  Ifpack_Preconditioner_Factory.cpp  IpPFcpp.html  Makefile
beginner/Linear_Solver_Belos/: CMakeLists.txt  IfpackBelos2.html  LSBcpp.html  Linear_Solver_Belos.cpp  Makefile
beginner/Linear_Solver_Ifpack/: CMakeLists.txt  IfpackAztec.html  LSIcpp.html  Linear_Solver_Ifpack.cpp  Makefile
beginner/Linear_Solver_ml/: CMakeLists.txt  LSmlcpp.html  Linear_Solver_ml.cpp  MLAztec.html  Makefile
beginner/Linear_Solver_mlMultiGrid/: CMakeLists.txt  LSmlMGcpp.html  Linear_Solver_mlMultiGrid.cpp  MLAztec2.html  Makefile
beginner/NOX_Newton1/: CMakeLists.txt  Makefile  NOX1cpp.html  NOXNewton.html  NOX_Newton1.cpp
beginner/NOX_Newton2/: CMakeLists.txt  Makefile  NOX2.html  NOXNewton2.html  NOX_Newton2.cpp
beginner/Teuchos_BLAS/: CMakeLists.txt  Makefile  TBLAScpp.html  TeuchosBLAS.html  Teuchos_BLAS.cpp
beginner/Teuchos_CLP/: CMakeLists.txt  Makefile  TCPL.html  TeuchosCPL.html  Teuchos_CLP.cpp
beginner/Teuchos_LAPACK/: CMakeLists.txt  Makefile  TLAPACKcpp.html  TeuchosLAPACK.html  Teuchos_LAPACK.cpp
beginner/Teuchos_PL/: CMakeLists.txt  Makefile  TPLcpp.html  TeuchosPL.html  Teuchos_PL.cpp
beginner/Teuchos_RCP/: CMakeLists.txt  Makefile  TRCPcpp.html  TeuchosRCP.html  Teuchos_RCP.cpp
beginner/Teuchos_SDM/: CMakeLists.txt  Makefile  TSDMcpp.html  TeuchosSDM.html  Teuchos_SDM.cpp
beginner/Teuchos_Time/: CMakeLists.txt  Makefile  TTcpp.html  TeuchosTime.html  Teuchos_Time.cpp
beginner/Tpetra_Init/: CMakeLists.txt  Makefile  TIcpp.html  TpetraInit.html  Tpetra_Init.cpp
beginner/Tpetra_Lesson01-Init/: CMakeLists.txt  Makefile
beginner/Tpetra_Lesson02-Map-Vector/: CMakeLists.txt  Makefile  lesson02_read_modify_vec.cpp
beginner/Tpetra_Lesson03-Power-Method/: CMakeLists.txt  Makefile  lesson03_power_method.cpp
beginner/Tpetra_Lesson04-Sparse-Matrix-Fill/: CMakeLists.txt
beginner/Tpetra_Lesson05-Redistribution/: CMakeLists.txt  Makefile  lesson05_redistribution.cpp
beginner/Tpetra_Vector/: CMakeLists.txt  Makefile  Tpetra_Vector.cpp
ctests/: CMakeLists.txt  CMakeLists.txt~  Epetra_CrsMatrix.cpp
ctests/Belos_Block/: CMakeLists.txt  CMakeLists.txt~
ctests/Epetraext_MatrixMatrix/: CMakeLists.txt  CMakeLists.txt~
ctests/Stratimikos_Preconditioner/: CMakeLists.txt  CMakeLists.txt~  Makefile  MixedOrderPhysicsBasedPreconditioner.cpp~
ctests/Stratimikos_Solver_Driver/: CMakeLists.txt  CMakeLists.txt~  Makefile  Makefile~  Stratimikos_Solver_Driver.cpp~  definition  test_single_stratimikos_solver.cpp  test_single_stratimikos_solver.cpp~
ctests/Teuchos_ParameterList/: CMakeLists.txt  CMakeLists.txt~  cxx_main.cpp~
ctests/Teuchos_ParameterList-10_8/: CMakeLists.txt  CMakeLists.txt~
ctests/Teuchos_UnitTest/: CMakeLists.txt  CMakeLists.txt~
ctests/Tpetra_Basic_PerfTest/: CMakeLists.txt  CMakeLists.txt~  Tpetra_Basic_Perf-10_8_5.cpp~
custom/My_Example/: .make.log.swp  Makefile  My_Example.cpp
custom/My_Tec_PL/: Makefile  My_Tec_PL.cpp
custom/My_Tpetra_Vector/: Makefile  My_Tpetra_Vector.cpp
gui/Epetra_Basic_Perf_Gui/: EBP_Gui.cpp  Epetra_Basic_Perf.cpp  Makefile  gui.xml
gui/tutorial_gui/: CMakeLists.txt  Makefile  Optika_GUI.hpp  Optika_metawindow.hpp  gui.xml  gui_input.xml  tutorial_gui.cpp  tutorial_gui.cpp.txt
