include_directories(${CMAKE_CURRENT_SOURCE_DIR})

ADD_SUBDIRECTORY(Anasazi_Block_Davidson)
ADD_SUBDIRECTORY(Anasazi_Block_KrylovSchur)
ADD_SUBDIRECTORY(Anasazi_LOBPCG)
ADD_SUBDIRECTORY(Epetra_Power_Method)
ADD_SUBDIRECTORY(Epetra_Simple_Vector)
ADD_SUBDIRECTORY(Epetra_Lesson01-Init)
ADD_SUBDIRECTORY(Epetra_Lesson02-Map-Vector)
ADD_SUBDIRECTORY(Epetra_Lesson03-Power-Method)
ADD_SUBDIRECTORY(Epetra_Lesson04-Sparse-Matrix-Fill)
ADD_SUBDIRECTORY(Epetra_Lesson05-Redistribution)
ADD_SUBDIRECTORY(Galeri_Linear_System)
ADD_SUBDIRECTORY(Ifpack_Preconditioner_Factory)
ADD_SUBDIRECTORY(Linear_Solver_Belos)
ADD_SUBDIRECTORY(Linear_Solver_Ifpack)
ADD_SUBDIRECTORY(Linear_Solver_ml)
ADD_SUBDIRECTORY(Linear_Solver_mlMultiGrid)
ADD_SUBDIRECTORY(NOX_Newton1)
ADD_SUBDIRECTORY(NOX_Newton2)
ADD_SUBDIRECTORY(Teuchos_PL)
ADD_SUBDIRECTORY(Teuchos_RCP)
ADD_SUBDIRECTORY(Teuchos_CLP)
ADD_SUBDIRECTORY(Teuchos_SDM)
ADD_SUBDIRECTORY(Teuchos_BLAS)
ADD_SUBDIRECTORY(Teuchos_LAPACK)
ADD_SUBDIRECTORY(Teuchos_Time)
ADD_SUBDIRECTORY(Tpetra_Init)
ADD_SUBDIRECTORY(Tpetra_Vector)
ADD_SUBDIRECTORY(Tpetra_Lesson01-Init)
ADD_SUBDIRECTORY(Tpetra_Lesson02-Map-Vector)
ADD_SUBDIRECTORY(Tpetra_Lesson03-Power-Method)
ADD_SUBDIRECTORY(Tpetra_Lesson04-Sparse-Matrix-Fill)
ADD_SUBDIRECTORY(Tpetra_Lesson05-Redistribution)
INCLUDE(CPack)

